<resources>
    <string name="app_name">Dominos Pizza</string>
    <string name="title_activity_loggin">Loggin Dominos Pizza</string>
    <string name="title_activity_registro">Registro Dominos Pizza</string>
    <string name="title_activity_splash">Dominos Pizza</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="ConfirmarContraseña">Confirmar Contraseña</string>
    <string name="Entrar">Entrar</string>
    <string name="Registro">Registro</string>
    <string name="email">Correo Electronico</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="mMainActivity">Pagina principal</string>
    <string name="mProductos">Nuestro menu</string>
    <string name="mCerrarSesion">Cerrar Sesiòn</string>
    <string name="abierto">Open navigation drawer</string>
    <string name="cerrado">Close navigation drawer</string>
    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
